# rust-api-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json
migrations/: 20241218124653_create_users_table.sql  20241218125957_create_users_table.sql
src/: config.rs  db.rs  main.rs
src/auth/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
