[package]
name = "rust-api-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
actix-web = "4.9.0"
log = "0.4.22"
env_logger = "0.10"

[profile.release]
opt-level = 3  # Maximum optimization